some styles changed in app.css and quater span given a click hanfler in bottomrow.js

--- a/src/App.css
+++ b/src/App.css
@@ -33,11 +33,11 @@
 }
 
 .home {
-  background-color: #656565;
+  background-color: #4B329D;
 }
 
 .away {
-  background-color: #af750a;
+  background-color: #FEC10E;
 }
 
 .home__name,
